# 203_project

./: README.md  pyrightconfig.json
firmware/arduino_motor_controller/: arduino_motor_controller.ino
src/robot_bringup/: CMakeLists.txt  package.xml
src/robot_bringup/config/: costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  nav2_params.yaml  planner_params.yaml  slam_params.yaml
src/robot_bringup/launch/: bringup.launch.py  nav2.launch.py  robot_state_publisher.launch.py  slam.launch.py
src/robot_description/: CMakeLists.txt  package.xml
src/robot_description/launch/: display.launch.py
src/robot_description/rviz/: robot.rviz
src/robot_description/urdf/: properties.yaml  robot.urdf.xacro
src/serial_bridge/: CMakeLists.txt  package.xml
src/serial_bridge/launch/: serial_bridge.launch.py
src/serial_bridge/serial_bridge/: __init__.py  serial_bridge_node.py
